@@ -1,5 +1,8 @@
 2012-02-25  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/random.c (random_init, _random_seed_stir_callback):
+	  Scheduled initial timer for the min timeout instead of starting at 0.
+
 	* src/munged/random.c (_random_seed_stir_callback): Disabled timer for
 	  repeated stirrings if the minimum timeout is set to 0.
 	* src/libcommon/munge_defs.h:
